--- a/pepper/templates/users/admin/dashboard.html
+++ b/pepper/templates/users/admin/dashboard.html
@@ -1,4 +1,6 @@
 {% extends 'layouts/admin_base.html' %}
 {% block content %}
-<h1>Admin Dashboard</h1>
+    <div class="container">
+        <h1>Dashboard</h1>
+    </div>
 {% endblock %}
