--- a/pepper/templates/users/admin/set_mlh_id.html
+++ b/pepper/templates/users/admin/set_mlh_id.html
@@ -1,10 +1,13 @@
 {% extends 'layouts/admin_base.html' %}
 {% block content %}
-<h1>Set MLH ID</h1>
-<form action="{{ url_for('set-mlh-id') }}" method="POST">
-  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-  <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
-</form>
-<br>
-<p>List of pending users</p>
+    <div class="container">
+        <h1>Set MLH ID</h1>
+        <form action="{{ url_for('set-mlh-id') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+            </button>
+        </form>
+        <br>
+        <p>List of pending users</p>
+    </div>
 {% endblock content %}
