--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -1,56 +1,65 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<meta name="viewport" content="width=device-width" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<style type="text/css">
-		{% include 'emails/style.css' %}
-	</style>
+    <meta name="viewport" content="width=device-width"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <style type="text/css">
+        {% include 'emails/style.css' %}
+    </style>
 </head>
 
 <body itemscope itemtype="http://schema.org/EmailMessage">
 {% block email_schema %}
 {% endblock %}
-	<table class="body-wrap">
-		<tr>
-			<td></td>
-			<td class="container" width="600">
-				<div class="content">
-					<table class="main" width="100%" cellpadding="0" cellspacing="0">
-						<tr>
-							<td class="alert alert-neutral">
-                                                          <img src="{{ url_for('static', filename='branding/color_logo_small.png') }}" width=183 height=50>
-							</td>
-						</tr>
-						<tr>
-							<td class="content-wrap">
-								<table width="100%" cellpadding="0" cellspacing="0">
-									{% block message %}
-									{% endblock %}
-								</table>
-							</td>
-						</tr>
-					</table>
-					<div class="footer">
-						<table width="100%">
-							<tr>
-								<td class="aligncenter content-block">{% block footer %}You are receiving this because you went to {{ config.HACKATHON_NAME }}. If you don't remember doing that or no longer wish to receive these emails, please send an email to <a href="mailto:{{config.GENERAL_INFO_EMAIL}}">{{config.GENERAL_INFO_EMAIL}}</a>.{% endblock %}</td>
-							</tr>
-							<tr>
-								<td class="aligncenter content-block">
-									<a href="https://facebook.com/HackTX"><img src="{{url_for('static', filename='img/social/fb.png')}}"></a>
-									<a href="https://twitter.com/HackTX"><img src="{{url_for('static', filename='img/social/twitter.png')}}"></a>
-									<a href="https://github.com/HackTX"><img src="{{url_for('static', filename='img/social/github.png')}}"></a>
-								</td>
-							</tr>
-						</table>
-					</div>
-				</div>
-			</td>
-			<td></td>
-		</tr>
-	</table>
+<table class="body-wrap">
+    <tr>
+        <td></td>
+        <td class="container" width="600">
+            <div class="content">
+                <table class="main" width="100%" cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td class="alert alert-neutral">
+                            <img src="{{ url_for('static', filename='branding/color_logo_small.png') }}" width=183
+                                 height=50>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="content-wrap">
+                            <table width="100%" cellpadding="0" cellspacing="0">
+                                {% block message %}
+                                {% endblock %}
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+                <div class="footer">
+                    <table width="100%">
+                        <tr>
+                            <td class="aligncenter content-block">{% block footer %}You are receiving this because you
+                                went to {{ config.HACKATHON_NAME }}. If you don't remember doing that or no longer wish
+                                to receive these emails, please send an email to
+                                <a href="mailto:{{ config.GENERAL_INFO_EMAIL }}">{{ config.GENERAL_INFO_EMAIL }}</a>
+                                .{% endblock %}</td>
+                        </tr>
+                        <tr>
+                            <td class="aligncenter content-block">
+                                <a href="https://facebook.com/HackTX"><img
+                                        src="{{ url_for('static', filename='img/social/fb.png') }}"></a>
+                                <a href="https://twitter.com/HackTX"><img
+                                        src="{{ url_for('static', filename='img/social/twitter.png') }}"></a>
+                                <a href="https://github.com/HackTX"><img
+                                        src="{{ url_for('static', filename='img/social/github.png') }}"></a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </td>
+        <td></td>
+    </tr>
+</table>
 
 </body>
 
