--- a/pepper/templates/users/accept.html
+++ b/pepper/templates/users/accept.html
@@ -1,59 +1,67 @@
 {% extends 'layouts/base.html' %}
 {% block imports %}
-<script type="text/javascript" src="https://s3.amazonaws.com/cdn.hellosign.com/public/js/hellosign-embedded.LATEST.min.js"></script>
-{#	<script>#}
-{#	HelloSign.init('{{ config.HELLO_SIGN_CLIENT_ID }}');#}
-{##}
-{#	$(document).ready(function() {#}
-{#		HelloSign.open({#}
-{#			'url': '{{ sign_url }}',#}
-{#			'debug': true,#}
-{#			'allowCancel': true,#}
-{#			'skipDomainVerification': true,#}
-{#			messageListener: function(eventData) {#}
-{#				// do something#}
-{#			}#}
-{#		});#}
-{#	});#}
-{#	</script>#}
+    <script type="text/javascript"
+            src="https://s3.amazonaws.com/cdn.hellosign.com/public/js/hellosign-embedded.LATEST.min.js"></script>
+    {#	<script>#}
+    {#	HelloSign.init('{{ config.HELLO_SIGN_CLIENT_ID }}');#}
+    {##}
+    {#	$(document).ready(function() {#}
+    {#		HelloSign.open({#}
+    {#			'url': '{{ sign_url }}',#}
+    {#			'debug': true,#}
+    {#			'allowCancel': true,#}
+    {#			'skipDomainVerification': true,#}
+    {#			messageListener: function(eventData) {#}
+    {#				// do something#}
+    {#			}#}
+    {#		});#}
+    {#	});#}
+    {#	</script>#}
 {% endblock %}
 {% block content %}
-	<script src="{{ url_for('static', filename='js/accept.js') }}"></script>
-	<div class="col-md-6 col-md-offset-3">
-	<div class="center">
-		<h2>Congratulations {{ user.fname }}!</h2>
-		<div class="large-text">
-			<p>You're in! We're super excited to have you join us this year at {{ config.HACKATHON_NAME }}!</p>
-			<p>What's next? We'll need you to confirm that you'll be attending this year and then we'll walk you through what's required.</p>
-		</div>
-	</div>
-	<div class="accept top-buffer">
-		<form method="POST" action="{{ url_for('accept-invite') }}" enctype=multipart/form-data>
-			<div class="col-md-12">
+    <script src="{{ url_for('static', filename='js/accept.js') }}"></script>
+    <div class="col-md-6 col-md-offset-3">
+        <div class="center">
+            <h2>Congratulations {{ user.fname }}!</h2>
+            <div class="large-text">
+                <p>You're in! We're super excited to have you join us this year at {{ config.HACKATHON_NAME }}!</p>
+                <p>What's next? We'll need you to confirm that you'll be attending this year and then we'll walk you
+                    through what's required.</p>
+            </div>
+        </div>
+        <div class="accept top-buffer">
+            <form method="POST" action="{{ url_for('accept-invite') }}" enctype=multipart/form-data>
+                <div class="col-md-12">
 
-				<div class="form-group">
-					<label for="btn-input" class="center title">Will you be coming to {{ config.HACKATHON_NAME }}?</label><br>
-					<div class="col-md-6">
-						<button id="accept" type="button" class="decision" data-toggle="button">I'll Be There!</button>
-					</div>
-					<div class="col-md-6">
-						<button id="reject" type="button" class="decision">Sorry, I Can't Make It</button>
-					</div>
-					<div class="col-md-12">
-						<div id="accept-fields" class="large-text" hidden>
-							<p class="center">Great! We want to get you checked in as fast as possible, so we'll need your signature on some legal documents required by UT Austin.</p>
-							<button type="submit" name="accept" class="center-block submit">Next <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
-						</div>
-						<div id="reject-area" class="large-text" hidden>
-							<p class="center">Sorry to hear that you won't be able to make it. We'd love for you to join us for our hackathon this spring! Once you submit, your spot will be released to another student.</p>
-							<button type="submit" name="reject" class="center-block submit">Submit</button>
+                    <div class="form-group">
+                        <label for="btn-input" class="center title">Will you be coming
+                            to {{ config.HACKATHON_NAME }}?</label><br>
+                        <div class="col-md-6">
+                            <button id="accept" type="button" class="decision" data-toggle="button">I'll Be There!
+                            </button>
+                        </div>
+                        <div class="col-md-6">
+                            <button id="reject" type="button" class="decision">Sorry, I Can't Make It</button>
+                        </div>
+                        <div class="col-md-12">
+                            <div id="accept-fields" class="large-text" hidden>
+                                <p class="center">Great! We want to get you checked in as fast as possible, so we'll
+                                    need your signature on some legal documents required by UT Austin.</p>
+                                <button type="submit" name="accept" class="center-block submit">Next <i
+                                        class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
+                            </div>
+                            <div id="reject-area" class="large-text" hidden>
+                                <p class="center">Sorry to hear that you won't be able to make it. We'd love for you to
+                                    join us for our hackathon this spring! Once you submit, your spot will be released
+                                    to another student.</p>
+                                <button type="submit" name="reject" class="center-block submit">Submit</button>
 
-						</div>
-					</div>
-				</div>
+                            </div>
+                        </div>
+                    </div>
 
-			</div>
-		</form>
-	</div>
-	</div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
