--- a/pepper/templates/users/admin/accept_users.html
+++ b/pepper/templates/users/admin/accept_users.html
@@ -1,35 +1,62 @@
 {% extends 'layouts/admin_base.html' %}
+{% block imports %}
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+    <script src="{{ url_for('static', filename='js/batch-modify.js') }}"></script>
+{% endblock %}
 {% block content %}
-<h1>Accept Users</h1>
-<form action="{{ url_for('batch-modify') }}" method="POST">
-  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-  <input type="number" name="num_to_accept" placeholder="Number to accept">
-  <div class="select">
-    <select name="type">
-      <option value="fifo">FIFO</option>
-      <option value="random">Random</option>
-    </select>
-    <div class="select__arrow"></div>
-  </div>
-  <label class="control control--checkbox">Include waitlisted
-    <input type="checkbox" name="include_waitlist" value="true"/>
-    <div class="control__indicator"></div>
-  </label>
-  <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
-  </button>
-</form>
-<br>
-<p> List of pending users</p>
+    <div class="container">
+        <h1>User(s) With Verified Emails</h1>
+        <table id="user_table" class="display" cellspacing="0">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Status</th>
+                <th>Applied At</th>
+                <th>Email</th>
+                <th>Verified Email</th>
+                <th>Team ID</th>
+                <th>Joined Team At</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for user in users %}
+                <tr>
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.fname }}</td>
+                    <td>{{ user.lname }}</td>
+                    <td>{{ user.status }}</td>
+                    <td>{{ user.time_applied }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.confirmed }}</td>
+                    <td>{{ user.team_id }}</td>
+                    <td>{{ user.time_team_join }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-<ul>
-</ul>
-<ul>
-  {% for user in users %}
-  <div class="row">
-    <div class="col-md-6">
-      {{ user.fname }} {{ user.lname }}
+        <form action="{{ url_for('batch-modify') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <p>Number of Users to Accept </p>
+            <input type="number" name="num_acceptance">
+            <p>Acceptance Heuristic</p>
+            <div class="select">
+                <select name="acceptance_heuristic">
+                    <option value="fifo">FIFO (first in, first out)</option>
+                    <option value="random">Random</option>
+                </select>
+                <div class="select__arrow"></div>
+            </div>
+            <label class="control control--checkbox">Include Waitlisted
+                <input type="checkbox" name="include_waitlisted" value="true"/>
+                <div class="control__indicator"></div>
+            </label>
+            <button type="submit" class="confirm">Accept User(s) <i class="fa fa-arrow-circle-o-right"
+                                                                    aria-hidden="true"></i>
+            </button>
+        </form>
     </div>
-  </div>
-  {% endfor %}
-</ul>
 {% endblock content %}
