--- a/pepper/templates/users/admin/reject_users.html
+++ b/pepper/templates/users/admin/reject_users.html
@@ -1,10 +1,15 @@
 {% extends 'layouts/admin_base.html' %}
 {% block content %}
-<h1>Send Email</h1>
-<form action="{{ url_for('reject-users') }}" method="POST">
-  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-  <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
-</form>
-<br>
-<p>List of pending users</p>
+    <div class="container">
+        <h1>Waitlisted User(s)</h1>
+        {% for user in users %}
+            <ul>{{ user.fname }} {{ user.lname }} {{ user.email }}</ul>
+        {% endfor %}
+        <form action="{{ url_for('reject-users') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <button type="submit" class="confirm">Reject All <i class="fa fa-arrow-circle-o-right"
+                                                                aria-hidden="true"></i>
+            </button>
+        </form>
+    </div>
 {% endblock content %}
